[package]
name = "rustwall"
version = "0.1.0"
authors = ["Michal Podhradsky <michal.podhradsky@aggiemail.usu.edu>"]

[lib]
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies.lazy_static]
version = "1.0"
default-features = false
features = ["spin_no_std"]

[dependencies.spin]
version = "0.4.8"

[dependencies.smoltcp]
default-features = false
features = ["proto-ipv4", "proto-ipv6",
  "socket-icmp", "socket-udp", "alloc","fragmentation-ipv4"]
#path = "../../../../../projects/smoltcp"
#git = "https://github.com/GaloisInc/smoltcp"
#branch =  "firewall"
path = "../smoltcp"

[replace]
"libc:0.2.40" = { git = 'https://github.com/GaloisInc/rs_liblibc.git' }

[features]
"debug-print" = []
"no-fragments" = []
"mac-check" = []
default = ["mac-check"]
